refactor(auth): extract field validations into separate methods
- move email, name, and password validation to distinct private methods
- return early on validation failure instead of flag accumulation
- simplify performSave() by extracting form value retrieval and save logic

refactor(components): add transient keyword to non-serializable fields in dialogs

- mark DeckFacade, UserUseCase, and Consumer fields as transient in dialogs
- prevent unintended serialization issues with UI component fields
- use local binders instead of instance fields in dialogs

style(top-menu): improve role and route constants usage

- add ROLE_USER, ROLE_ADMIN, and LOGOUT_ROUTE constants
- replace repeated string literals with defined constants
- simplify authentication retrieval without redundant null checks
- improve menu button creation with better event handler separation

feat(practice-settings-dialog): show success notification on save

- add notification with success theme after saving settings
- provide user feedback for successful action

style(css): adjust input field background and border for dark theme

- include vaadin-email-field alongside other input fields with consistent styles
- soften invalid input error message colors and remove heavy backgrounds
- add subtle red border and shadow for invalid states

style(css): improve button and icon styling for dark backgrounds

- define styles for primary, success, error, tertiary, and small buttons
- set appropriate colors, borders, shadows, and hover effects
- style vaadin-icon colors and shadows for contrast and visibility
- enhance checkbox styles with background, border, and checkmark

style(css): enhance grid and form field contrast

- update vaadin-grid background, border-radius, shadow, and overflow
- style header cells, normal cells, even/odd rows for readability
- add semantic status color badges inside grid cells
- ensure icons and buttons inside grids have consistent dark colors
- style form fields labels, helper text